SPT: Fix Safari Overlapping Layout Issue (#39989)
Safari has a flexbox layout bug where no height is calculated for a parent container with `flex-direction: column` and child with `flex-basis: 0`. This results in overlapping content. This PR changes the child columns container to `flex-basis: auto` to fix layouts in Safari.

--- a/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
+++ b/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
@@ -479,4 +479,11 @@ body.admin-bar:not( .is-fullscreen-mode ) .page-template-modal-screen-overlay {
 	.block-iframe-preview__template-title {
 		padding-top: 20px;
 	}
+
+	// flex: column; on the parent and flex-basis: 0; on the child in Safari causes a lot of weird overlapping layout 
+	// issues in the iframe preview: https://github.com/Automattic/wp-calypso/issues/39874
+	// Using flex-basis: auto; on the child allows the height to be calculated properly
+	.wp-block-columns > .block-editor-inner-blocks > .block-editor-block-list__layout > [data-type='core/column'] .block-core-columns {
+		flex-basis: auto;
+	}
 }
